--- a/app/templates/publications/overview/search.hbs
+++ b/app/templates/publications/overview/search.hbs
@@ -11,10 +11,11 @@
         </div>
         <AuInput
           data-test-route-search-input
-          @width="block"
-          @value={{this.searchTextBuffer}}
           id="keyword"
           placeholder={{t "search-placeholder"}}
+          value={{this.searchTextBuffer}}
+          @width="block"
+          {{on "input" (pick "target.value" (set this "searchTextBuffer"))}}
         />
       </AuFormRow>
       <AuFormRow class="au-u-margin-top-none au-u-1-6">
