KAS-4576 Refactor AuTextarea instances

--- a/app/components/cases/edit-case.hbs
+++ b/app/components/cases/edit-case.hbs
@@ -10,8 +10,9 @@
         <Auk::Label>{{t "short-title-case"}}</Auk::Label>
         <AuTextarea
           data-test-edit-case-shorttitle
+          value={{this.shortTitle}}
           @width="block"
-          @value={{this.shortTitle}}
+          {{on "input" (pick "target.value" (set this "shortTitle"))}}
         />
       </AuFormRow>
     </div>
