--- a/app/components/cases/new-subcase.hbs
+++ b/app/components/cases/new-subcase.hbs
@@ -57,16 +57,18 @@
           <Auk::Label>{{t "name-subcase"}}</Auk::Label>
           <AuTextarea
             data-test-new-subcase-shorttitle
+            value={{this.shortTitle}}
             @width="block"
-            @value={{this.shortTitle}}
+            {{on "input" (pick "target.value" (set this "shortTitle"))}}
           />
         </AuFormRow>
         <AuFormRow>
           <Auk::Label>{{t "title-subcase"}}</Auk::Label>
           <AuTextarea
             data-test-new-subcase-longtitle
+            value={{this.title}}
             @width="block"
-            @value={{this.title}}
+            {{on "input" (pick "target.value" (set this "title"))}}
           />
         </AuFormRow>
         <AuFormRow>
