--- a/app/components/publications/publication/proofs/proof-request-modal.hbs
+++ b/app/components/publications/publication/proofs/proof-request-modal.hbs
@@ -61,8 +61,9 @@
             data-test-proof-request-message
             id="proofRequestMessage"
             rows="16"
+            value={{this.message}}
             @width="block"
-            @value={{this.message}}
+            {{on "input" (pick "target.value" (set this "message"))}}
           />
         </AuFormRow>
       </div>
