--- a/app/components/publications/publication/publication-activities/publication-request-modal.hbs
+++ b/app/components/publications/publication/publication-activities/publication-request-modal.hbs
@@ -60,8 +60,9 @@
             data-test-publication-request-message
             id="publicationRequestModal_message"
             rows="16"
+            value={{this.message}}
             @width="block"
-            @value={{this.message}}
+            {{on "input" (pick "target.value" (set this "message"))}}
           />
         </AuFormRow>
       </div>
