--- a/app/templates/settings/organizations/index.hbs
+++ b/app/templates/settings/organizations/index.hbs
@@ -17,6 +17,7 @@
           @identifier="blocked"
           @name="blocked"
           @checked={{this.showBlockedOrganizationsOnly}}
+          @onChange={{set this "showBlockedOrganizationsOnly"}}
         />
       </div>
     </div>
