KAS-4576 Refactor AuToggleSwitch instances (missing label conversions)

--- a/app/components/documents/batch-details/batch-editing-row.hbs
+++ b/app/components/documents/batch-details/batch-editing-row.hbs
@@ -28,10 +28,11 @@
     <td>
       <AuToggleSwitch
         @skin="primary"
-        @label={{t "present-for-signing"}}
         @disabled={{or this.isDisabled this.isSignMarkingDisabled @agendaitemIsRetracted}}
         @onChange={{this.setMarkedForSignature}}
-      />
+      >
+        {{t "present-for-signing"}}
+      </AuToggleSwitch>
     </td>
   {{/if}}
   <td class="auk-u-text-align--right">
