--- a/app/components/documents/batch-details/document-details-row.hbs
+++ b/app/components/documents/batch-details/document-details-row.hbs
@@ -55,11 +55,12 @@
         {{else}}
           <AuToggleSwitch
             @skin="primary"
-            @label={{t "present-for-signing"}}
             @disabled={{@agendaitemIsRetracted}}
             @checked={{@row.markedForSignature}}
             @onChange={{@row.setMarkedForSignature}}
-          />
+          >
+            {{t "present-for-signing"}}
+          </AuToggleSwitch>
       {{/if}}
     </td>
   {{/if}}
