replace subcase-detail-nav with new component

--- a/app/components/subcases/subcase-detail-nav.hbs
+++ b/app/components/subcases/subcase-detail-nav.hbs
@@ -1,34 +1,1 @@
-<div>
-  <div class="c-anchor-nav-holder">
-    <p>{{t "on-this-page"}}: </p>
-    <ul class="au-c-anchor-nav">
-      <li>
-        <a
-          href="#case"
-          class="js-anchor"
-          onclick={{fn this.scrollToFragment "case"}}
-        >
-          {{t "overview"}}
-        </a>
-      </li>
-      <li>
-        <a
-          href="#documents"
-          class="js-anchor"
-          onclick={{fn this.scrollToFragment "documents"}}
-        >
-          {{t "documents"}}
-        </a>
-      </li>
-      <li>
-        <a
-          href="#agenda"
-          class="js-anchor"
-          onclick={{fn this.scrollToFragment "agenda"}}
-        >
-          {{t "agenda-activities"}}
-        </a>
-      </li>
-    </ul>
-  </div>
-</div>
+<OnThisPageLinks @items={{this.items}} />
