reduce screen flicker by setting tracked vars in 1 function

--- a/app/components/subcases/side-nav.hbs
+++ b/app/components/subcases/side-nav.hbs
@@ -28,6 +28,7 @@
           <Subcases::SideNav::ParliamentSubcase
             @subcase={{item.subcase}}
             @latestSubmissionActivity={{item.latestSubmissionActivity}}
+            @parliamentFlow={{item.parliamentFlow}}
             @selected={{false}}
           />
         {{/if}}
