--- a/app/components/vp/sent-to-vp-modal.hbs
+++ b/app/components/vp/sent-to-vp-modal.hbs
@@ -10,7 +10,7 @@
     <AuContent>
       <p><strong>{{t "long-title"}}:</strong> {{or @submissionActivity.title "-"}}</p>
       {{#if @submissionActivity.submitter.fullName}}
-        <p><strong>{{t "submitter"}}:</strong> {{or @submissionActivity.submitter.fullName}}</p>
+        <p><strong>{{t "submitter"}}:</strong> {{@submissionActivity.submitter.fullName}}</p>
       {{/if}}
       {{#if this.subcaseWithPieces.isLoading}}
         <Auk::Loader />
