move all data loading to case model

--- a/app/templates/cases/case.hbs
+++ b/app/templates/cases/case.hbs
@@ -5,6 +5,7 @@
   <div class="auk-panel-layout__sidebar auk-panel-layout__sidebar--cases">
     <Subcases::SideNav
       @decisionmakingFlow={{@model.decisionmakingFlow}}
+      @latestParliamentSubmissionActivity={{@model.latestParliamentSubmissionActivity}}
       @parliamentFlow={{@model.parliamentFlow}}
       @subcases={{@model.subcases}}
     />
