--- a/app/templates/signatures.hbs
+++ b/app/templates/signatures.hbs
@@ -24,9 +24,15 @@
           {{#if (user-may "manage-secretary-signatures")}}
             <Auk::Tab @route="signatures.decisions">
               {{t "decisions-and-minutes"}}
-            </Auk::Tab>  
+            </Auk::Tab>
             <Auk::Tab @route="signatures.ongoing-decisions">
               {{t "decisions-and-minutes-ongoing"}}
+            </Auk::Tab>
+            <Auk::Tab @route="signatures.ratifications">
+              {{t "ratifications"}}
+            </Auk::Tab>
+            <Auk::Tab @route="signatures.ongoing-ratifications">
+              {{t "ratifications-ongoing"}}
             </Auk::Tab>
           {{/if}}
         </Auk::Tabs>
