--- a/app/components/cases/parliament/description-panel.hbs
+++ b/app/components/cases/parliament/description-panel.hbs
@@ -1,70 +1,105 @@
-<div  id="case" class="auk-u-mb-4">
-  <Auk::Panel data-test-subcase-description-panel>
-    <Auk::Panel::Header>
-      <Auk::Toolbar>
-        <Auk::Toolbar::Group @position="left">
-          <Auk::Toolbar::Item>
-            <div class="au-u-flex au-u-flex--spaced-small">
-              <h4 class="auk-panel__title">
-                {{t "case-info"}}
-              </h4>
-            </div>
-          </Auk::Toolbar::Item>
-        </Auk::Toolbar::Group>
-        <Auk::Toolbar::Group @position="right">
-          <Auk::Toolbar::Item>
-            <AuLinkExternal @icon="external" @iconAlignment="right" href="https://www.vlaamsparlement.be/nl/parlementaire-documenten/parlementaire-initiatieven/1671548">Naar Vlaams Parlement</AuLinkExternal>
-          </Auk::Toolbar::Item>
-        </Auk::Toolbar::Group>
-      </Auk::Toolbar>
-    </Auk::Panel::Header>
-    <Auk::Panel::Body>
-      <AuHeading @level="4" @skin="4">{{t "design-of"}} {{@subcase.shortTitle}}</AuHeading>
-    </Auk::Panel::Body>
-    <Auk::Panel::Body>
-      <div class="au-o-grid au-o-grid--small au-u-1-1">
-        <div class="au-o-grid__item au-u-1-2 au-u-1-4@medium">
-          <AuHeading @level="4" @skin="6">{{t "status"}}</AuHeading>
-          <AuPill @skin="warning" @size="small">Plenaire vergadering</AuPill>
-        </div>
-        <div class="au-o-grid__item au-u-1-2 au-u-1-4@medium">
-          <AuHeading @level="4" @skin="6">Nummer</AuHeading>
-          <p class="auk-u-mt-1">1446 (2022-2023) nr. 1</p>
-        </div>
-        {{!-- <div class="au-o-grid__item au-u-1-2 au-u-2-4@medium">
-          <AuHeading @level="4" @skin="6">Stand van zaken</AuHeading>
-          <p class="auk-u-mt-1">Bekendgemaakt in Belgisch Staatsblad</p>
-        </div> --}}
+<Auk::Panel data-test-subcase-description-panel>
+  <Auk::Panel::Header>
+    <Auk::Toolbar>
+      <Auk::Toolbar::Group @position="left">
+        <Auk::Toolbar::Item>
+          <div class="au-u-flex au-u-flex--spaced-small">
+            <h4 class="auk-panel__title">
+              {{t "case-info"}}
+            </h4>
+          </div>
+        </Auk::Toolbar::Item>
+      </Auk::Toolbar::Group>
+      <Auk::Toolbar::Group @position="right">
+        <Auk::Toolbar::Item>
+          <AuLinkExternal
+            @icon="external"
+            @iconAlignment="right"
+            href={{concat
+              "https://www.vlaamsparlement.be/nl/parlementaire-documenten/parlementaire-initiatieven/"
+              @parliamentFlow.parliamentId
+            }}
+          >
+            {{t "to-flemish-parliament"}}
+          </AuLinkExternal>
+        </Auk::Toolbar::Item>
+      </Auk::Toolbar::Group>
+    </Auk::Toolbar>
+  </Auk::Panel::Header>
+  <Auk::Panel::Body>
+    <AuHeading @level="4" @skin="4">{{t "design-of"}}
+      {{@parliamentFlow.title}}
+    </AuHeading>
+  </Auk::Panel::Body>
+  <Auk::Panel::Body>
+    <div class="au-o-grid au-o-grid--small au-u-1-1">
+      <div class="au-o-grid__item au-u-1-2 au-u-1-4@medium">
+        <AuHeading @level="4" @skin="6">{{t "status"}}</AuHeading>
+        <Parliament::StatusPill @parliamentFlow={{@parliamentFlow}} />
       </div>
-    </Auk::Panel::Body>
-    <Auk::Panel::Body class="auk-u-bg-alt">
-      <AuHeading @level="4" @skin="6">{{t "last-statusses"}}</AuHeading>
-      <ul class="vlc-status-timeline">
-        <li
-          class="vlc-status-timeline__item vlc-status-timeline__item--neutral"
-        >
-          <div class="vlc-status-timeline__dot"></div>
-          <div class="vlc-status-timeline__text">
-            Aangenomen in plenaire vergadering op <AuLinkExternal @icon="external" @iconAlignment="right" href="https://www.vlaamsparlement.be/nl/parlementaire-documenten/parlementaire-initiatieven/1671548">03 september 2023</AuLinkExternal>
-          </div>
-        </li>
-        <li
-          class="vlc-status-timeline__item vlc-status-timeline__item--neutral"
-        >
-          <div class="vlc-status-timeline__dot"></div>
-          <div class="vlc-status-timeline__text">
-            Bekrachtigd en afgekondigd op <AuLinkExternal @icon="external" @iconAlignment="right" href="https://www.vlaamsparlement.be/nl/parlementaire-documenten/parlementaire-initiatieven/1671548">03 september 2023</AuLinkExternal>
-          </div>
-        </li>
-        <li
-          class="vlc-status-timeline__item vlc-status-timeline__item--neutral"
-        >
-          <div class="vlc-status-timeline__dot"></div>
-          <div class="vlc-status-timeline__text">
-            Bekendgemaakt in het Belgisch Staatsblad op <AuLinkExternal @icon="external" @iconAlignment="right" href="https://www.vlaamsparlement.be/nl/parlementaire-documenten/parlementaire-initiatieven/1671548">03 september 2023</AuLinkExternal>
-          </div>
-        </li>
-      </ul>
-    </Auk::Panel::Body>
-  </Auk::Panel>
-</div>
+      <div class="au-o-grid__item au-u-1-2 au-u-1-4@medium">
+        <AuHeading @level="4" @skin="6">{{t "number"}}
+        </AuHeading>
+        <p class="auk-u-mt-1">{{@parliamentFlow.parliamentId}}</p>
+      </div>
+    </div>
+  </Auk::Panel::Body>
+  <Auk::Panel::Body class="auk-u-bg-alt">
+    {{#if this.loadStatusData.isIdle}}
+      {{!-- {{#if @retrievalActivity}} --}}
+      {{#if true}}
+        <AuHeading @level="4" @skin="6">{{t "last-statusses"}}</AuHeading>
+        <ul class="vlc-status-timeline">
+          <li
+            class="vlc-status-timeline__item vlc-status-timeline__item--neutral"
+          >
+            <div class="vlc-status-timeline__dot"></div>
+            <div class="vlc-status-timeline__text">
+              {{t "accepted-in-plenary-meeting-on"}}
+              {{! <AuLinkExternal
+              @icon="external"
+              @iconAlignment="right"
+              href="https://www.vlaamsparlement.be/nl/parlementaire-documenten/parlementaire-initiatieven/1671548"
+            >03 september 2023</AuLinkExternal> }}
+              {{date-phrase @retrievalActivity.startDate}}
+            </div>
+          </li>
+          {{#if this.latestMeeting}}
+            <li
+              class="vlc-status-timeline__item vlc-status-timeline__item--neutral"
+            >
+              <div class="vlc-status-timeline__dot"></div>
+              <div class="vlc-status-timeline__text">
+                {{t "ratified-and-announced-on"}}
+                <AuLinkExternal
+                  @icon="external"
+                  @iconAlignment="right"
+                  href="https://www.vlaamsparlement.be/nl/parlementaire-documenten/parlementaire-initiatieven/1671548"
+                >{{date-phrase this.latestMeeting.startedOn}}</AuLinkExternal>
+              </div>
+            </li>
+            {{#if false}}
+              <li
+                class="vlc-status-timeline__item vlc-status-timeline__item--neutral"
+              >
+                <div class="vlc-status-timeline__dot"></div>
+                <div class="vlc-status-timeline__text">
+                  {{t "published-in-belgian-official-gazette"}}
+                  <AuLinkExternal
+                    @icon="external"
+                    @iconAlignment="right"
+                    href="https://www.vlaamsparlement.be/nl/parlementaire-documenten/parlementaire-initiatieven/1671548"
+                  >03 september 2023</AuLinkExternal>
+                </div>
+              </li>
+            {{/if}}
+          {{/if}}
+        </ul>
+      {{else}}
+        Nog niet behandeld door het VP
+      {{/if}}
+    {{else}}
+      <AuLoader />
+    {{/if}}
+  </Auk::Panel::Body>
+</Auk::Panel>
