--- a/app/components/agenda/agenda-detail/sidebar-item.hbs
+++ b/app/components/agenda/agenda-detail/sidebar-item.hbs
@@ -7,7 +7,7 @@
   {{!-- Long term, I think we rather want this component to trigger an action when the "active" status toggles.
     With that, a higher-level component can decide if it wants to scroll this element in to view. Currently, because the active status
     is set right from the beginning and the component is rendered only once, scrolling on "did-insert" works just fine --}}
-  <div class="auk-o-flex"
+  <div data-test-agenda-detail-sidebar-item-container class="auk-o-flex"
     {{did-insert this.conditionallyScrollIntoView}}
     {{in-viewport
       onEnter=(perform this.lazyLoadSideData)
