remove "design-of" from title

--- a/app/components/cases/parliament/description-panel.hbs
+++ b/app/components/cases/parliament/description-panel.hbs
@@ -27,7 +27,7 @@
     </Auk::Toolbar>
   </Auk::Panel::Header>
   <Auk::Panel::Body>
-    <AuHeading @level="4" @skin="4">{{t "design-of"}}
+    <AuHeading @level="4" @skin="4">
       {{@parliamentFlow.title}}
     </AuHeading>
   </Auk::Panel::Body>
