attempt to fix some flaky tests

--- a/app/components/cases/subcases/mandatee-selector-panel.hbs
+++ b/app/components/cases/subcases/mandatee-selector-panel.hbs
@@ -52,6 +52,7 @@
             >
               {{#if this.showSubmitter}}
                 <AuRadio
+                  data-test-mandatee-selector-panel-submitter-radio
                   @name="submitter"
                   @checked={{eq this.submitterMandatee.id mandatee.id}}
                   @disabled={{@disabled}}
