Fix sorting on cases should be short-title, not long title

--- a/app/templates/cases/index.hbs
+++ b/app/templates/cases/index.hbs
@@ -44,7 +44,7 @@
                     <Utils::ThSortable
                       class="auk-table__col--8 auk-table__header-title"
                       @currentSorting={{this.sort}}
-                      @field="title"
+                      @field="short-title"
                       @label={{t "name"}}
                       @onChange={{fn (mut this.sort)}}
                     />
