Fix typo fix that was lost after split

--- a/app/components/agenda/agendaitem/decision/legacy.hbs
+++ b/app/components/agenda/agendaitem/decision/legacy.hbs
@@ -41,7 +41,7 @@
       <Documents::DocumentCard
         @piece={{this.report}}
         @decisionActivity={{@decisionActivity}}
-        @meeting={{@agendaContent.meeting}}
+        @meeting={{@agendaContext.meeting}}
         @isEditable={{true}}
         @agendaContext={{@agendaContext}}
         @hideNewerVersions={{true}}
