also show parliament-flow in side-nav if retrievalactivity

--- a/app/components/subcases/side-nav.hbs
+++ b/app/components/subcases/side-nav.hbs
@@ -28,7 +28,9 @@
           <Subcases::SideNav::ParliamentSubcase
             @subcase={{item.subcase}}
             @latestSubmissionActivity={{item.latestSubmissionActivity}}
+            @latestRetrievalActivity={{item.latestRetrievalActivity}}
             @parliamentFlow={{item.parliamentFlow}}
+            @date={{item.sortDate}}
             @selected={{false}}
           />
         {{/if}}
