--- a/app/components/subcases/side-nav/parliament-subcase.hbs
+++ b/app/components/subcases/side-nav/parliament-subcase.hbs
@@ -12,7 +12,7 @@
     </div>
     <div class="auk-sidebar__sublabel au-u-margin-top-none">
       {{t "last-edited-on"}}
-      {{datetime @latestSubmissionActivity.startDate}}
+      {{datetime @date}}
     </div>
     <div class="au-u-margin-top-tiny">
       <Parliament::StatusPill @parliamentFlow={{@parliamentFlow}} />
