--- a/app/templates/cases/case.hbs
+++ b/app/templates/cases/case.hbs
@@ -6,6 +6,7 @@
     <Subcases::SideNav
       @decisionmakingFlow={{@model.decisionmakingFlow}}
       @latestParliamentSubmissionActivity={{@model.latestParliamentSubmissionActivity}}
+      @latestParliamentRetrievalActivity={{@model.latestParliamentRetrievalActivity}}
       @parliamentFlow={{@model.parliamentFlow}}
       @subcases={{@model.subcases}}
     />
